# MaVaTS

./: LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: index.html  mavats.html  search.js
docs/mavats/: MAR.html  alphaPCA.html  factormodel.html
mavats/: MAR.py  __init__.py  alphaPCA.py  factormodel.py
tests/: test_MAR.py  test_alphaPCA.py  test_factormodel.py
