[tool.poetry]
name = "mavats"
version = "0.1.3.1"
description = "Some methods for matrix-valued time series"
authors = ["Daniel <danlixuan@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dx-li/MaVaTS"
documentation = "https://dx-li.github.io/MaVaTS/mavats.html"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"